--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,19 +1,19 @@
 version: 0.2
+
+env:
+  variables:
+    IMAGE_REPOSITORY_NAME: tf_ecr_repository
+    AWS_DEFAULT_REGION: ap-northeast-1
+    CONTAINER_NAME: tf_ecr_repository
+    AWS_ACCOUNT_ID: 914281350488
+
 phases:
   pre_build:
     commands:
-      - aws --version
-      # 環境変数の設定
-      - AWS_ACCOUNT_ID = 914281350488
-      - ECR_URI = $914281350488.dkr.ecr.$ap-northeast-1.amazonaws.com
-      - REPOSITORY_URI = ${ECR_URI}/tf_ECR_repository
-      - CONTAINER_NAME = tf_ecr_repository
-      # コミットハッシュの先頭7桁をタグに利用する
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
-      # ECRログイン
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_URI
+      - aws ecr get-login-password --region ${AWS_DEFAULT_REGION} | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com
+      - REPOSITORY_URI=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPOSITORY_NAME}
+      - IMAGE_TAG=$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - docker pull ${REPOSITORY_URI}:latest || true
   build:
     commands:
       - echo Build started on `date`
