--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,7 +31,7 @@ phases:
       - docker images
       - docker push ${REPOSITORY_URI}:latest
       - docker push ${REPOSITORY_URI}:${IMAGE_TAG}
-      - printf '[{"name":"tf_ecr_repository","imageUri":"%s"}' ${REPOSITORY_URI}:${IMAGE_TAG}]' > imagedefinitions.json
+      - printf '[{"name":"tf_ecr_repository","imageUri":"%s"}]' ${REPOSITORY_URI}:${IMAGE_TAG} > imagedefinitions.json
 artifacts:
     files: 
       - imagedefinitions.json
